# Quadtrees-from-scratch

./: CMakeLists.txt  ReadMe.md
include/: Circle.h  Point.h  QuadTree.h  Rectangle.h
src/: Circle.cpp  Point.cpp  QuadTree.cpp  Rectangle.cpp  main.cpp
